--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,10 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+# Local Env && DB config
+config/env.json
+config/db.json
+
+# Bower dependencies
+public/vendor
